Fixe equivalent tests parallel vs sequentual, make sure parallle doesn't skip the other tests.